# UML-State-Machine-in-C

./: .gitignore
demo/: CMakeLists.txt
demo/t_junction_traffic_lights/: CMakeLists.txt  readme.md
demo/t_junction_traffic_lights/src/: main.c  main_lights.c  main_lights.h  side_lights.c  side_lights.h
